--- a/Index.html
+++ b/Index.html
@@ -198,9 +198,9 @@
 
                     </div>
                     <div class="btnSection">
-                        <button class="Edit addBtn InVisible">Edit</button>
-                        <button class="reset addBtn InVisible">Reset</button>
-                        <button class="Start addBtn" onclick="MyToggle()">Start</button>
+                        <button class="Edit addBtn" onclick="MyToggle()">Edit</button>
+                        <button class="reset addBtn">Reset</button>
+                        <button class="Start addBtn">Start</button>
                     </div>
                     <div class="defaultTime">
 
@@ -378,7 +378,7 @@
                     <p class="zeroHead">On Zero</p>
                     <div class="zeroContent">
                        <div class="01">
-                            <input type="radio" id="stopTimer" name="timerOption" value="stopTimer">
+                            <input checked type="radio" id="stopTimer" name="timerOption" value="stopTimer">
                             <label for="stopTimer">Stop Timer</label>
                        </div>
                        <div class="02">
